# test_game

./: .gitignore  README.md
test_1/: models.py
test_2/: api.py  background_tasks.py  database.py  deps.py  init_db.py  main.py  models.py  pyproject.toml  schemas.py  settings.py
test_2/alembic/: env.py
test_2/alembic/versions/: 693a0d9b475e_.py
test_2/docker/: Dockerfile  check_conn.py  dev.env  docker-compose.yml  start.sh  start_celery.sh
